# SyncFile

./: PRD_v2_SetSync.md  README.md  TRD_v1_SetSync.md
setsync/agent/: .env  __init__.py  chunked_upload.py  cli.py  config.py  db.py  job_runner.py  pyproject.toml  requirements.lock.txt  requirements.txt  scanner.py  uploader.py  watcher.py
setsync/backend/: .env  Dockerfile  policy.yaml  pyproject.toml  requirements.lock.txt  requirements.txt
setsync/backend/.setsync_staging/d3829a02-3ce3-4600-a630-c6e114427747/: metadata.json
setsync/backend/alembic/: env.py
setsync/backend/alembic/versions/: 6a369834a0cd_add_plans_and_plan_items_tables.py  7c230dca3ad9_add_image_hash_column_to_file_records.py  c7ba0e7dd19a_initial_schema.py  d7697eece805_add_transfer_jobs_table.py  fa9d49737cf6_add_tenant_organizations_and_users_.py
setsync/backend/app/: config.py  database.py  dependencies.py  main.py  mcp_server.py
setsync/backend/app/models/: __init__.py  action_record.py  file_record.py  job.py  plan.py  source.py  tenant.py  undo_record.py
setsync/backend/app/routers/: __init__.py  actions.py  analysis.py  audit.py  auth.py  chunked_transfer.py  inventory.py  jobs.py  plans.py  query.py  semantic.py  sets.py  sources.py
setsync/backend/tests/: conftest.py  test_agent_keyring.py  test_api.py  test_auth_hardening.py  test_cleanup.py  test_delta_property.py  test_enterprise.py  test_nl_query.py  test_ops.py  test_plans.py  test_policy.py  test_quota.py  test_rate_limiter.py  test_safety.py  test_sandbox.py  test_semantic.py  test_set_engine.py  test_storage_backend.py
(+61 files in other folders)
