[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setsync-agent"
version = "1.0.0"
description = "SetSync Inventory Scanning & Watcher Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
setsync-agent = "agent.cli:cli"
